--- a/src/assets/scss/section1.scss
+++ b/src/assets/scss/section1.scss
@@ -2,7 +2,7 @@
   color: rgb(254, 15, 23);
   text-align: center;
   font-size: 5em;
-  background-color: #efefef;
+  background: rgb(35, 39, 65);
 }
 
 .about-me-name {
@@ -34,6 +34,7 @@
     width: auto;
     height: 90%;
     border-radius: 8px;
+    display: none;
   }
 }
 
@@ -43,6 +44,8 @@
     img {
       width: 100%;
       height: auto;
+      border-radius: 0;
+      display: block;
     }
   }
 
@@ -66,6 +69,8 @@
     img {
       width: auto;
       height: 100%;
+      border-radius: 0;
+      display: block;
     }
   }
 
