--- a/src/components/section-three/styles/section3.scss
+++ b/src/components/section-three/styles/section3.scss
@@ -7,6 +7,7 @@
   justify-content: center;
   font-size: 5em;
   font-family: arial, helvetica, sans-serif;
+  background-color: #42b983;
 }
 
 @media screen and (max-width: 500px) {
