--- a/src/components/section-seven/styles/section7.css
+++ b/src/components/section-seven/styles/section7.css
@@ -1,19 +1,19 @@
-.section-six {
+.section-seven {
     width: 100vw;
     height: 100vh;
     font-size: 5em;
     font-family: arial, helvetica, sans-serif;
-    background-color: #673ab7;
+    background-color: #3f51b5;
 }
 
-.s6-heading {
+.s7-heading {
     color: #fff;
     font-size: 1em;
     margin: 0;
     padding: 16px;
 }
 
-.s6-project-container {
+.s7-project-container {
     height: 70%;
     flex: 1;
     margin: 16px;
@@ -21,12 +21,8 @@
     background-color: #fff;
 }
 
-iframe > .s6-project-container {
-    border-radius: 4px;
-}
-
 @media screen and (max-width: 930px) {
-    .s6-heading {
+    .s7-heading {
         font-size: 0.5em;
     }
 }
