Include money care project

--- a/src/pages/projects/ProjectPage.scss
+++ b/src/pages/projects/ProjectPage.scss
@@ -1,4 +1,8 @@
 .project-page {
+  &-heading {
+    font-family: "Courier New", sans-serif !important;
+  }
+
   &-project-list {
     margin: 0 auto;
     max-width: 1200px;
