--- a/src/common/components/section-container/SectionContainer.scss
+++ b/src/common/components/section-container/SectionContainer.scss
@@ -5,7 +5,7 @@
 }
 
 .bg-zig-zag {
-  background-color: #00bb77;
+  background-color: #232741;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='120' height='120' viewBox='0 0 120 120'%3E%3Cpolygon fill='%23000' fill-opacity='.1' points='120 0 120 60 90 30 60 0 0 0 0 0 60 60 0 120 60 120 90 90 120 60 120 0'/%3E%3C/svg%3E");
 }
 
@@ -140,7 +140,7 @@
   z-index: 10;
 }
 
-#loader-wrapper .loader-section.section-left {
+.loader-wrapper .loader-section.section-left {
   left: 0;
 }
 
@@ -160,6 +160,11 @@
 
 .loaded .loader {
   opacity: 0;
+  transition: all 0.3s ease-out;
+}
+
+.loading .loader {
+  opacity: 1;
   transition: all 0.3s ease-out;
 }
 
