--- a/src/index.html.ejs
+++ b/src/index.html.ejs
@@ -29,11 +29,10 @@
             <noscript><div><img src="https://mc.yandex.ru/watch/87186519" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
             <!-- /Yandex.Metrika counter -->
         <% } %>
-        <title>Портфолио Максим Ильина</title>
+        <title>Портфолио Максима Ильина</title>
     </head>
     <body>
         <div id="root"></div>
-
         <!-- Dependencies -->
         <% if (webpackConfig.mode == 'production') { %>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/17.0.2/umd/react.production.min.js" integrity="sha512-qlzIeUtTg7eBpmEaS12NZgxz52YYZVF5myj89mjJEesBd/oE9UPsYOX2QAXzvOAZYEvQohKdcY8zKE02ifXDmA==" crossorigin="anonymous"></script>
